navbar e hero ajustados

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Elixir - Bootstrap Template</title>
+    <title>Marcelo Andreolli</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -18,7 +19,7 @@
     <nav class="navbar navbar-expand-lg bg-white sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="./assets/images/logo-dark.svg" alt="">
+                <img class="logo" src="./assets/images/logo_marcelo_teste.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,28 +31,25 @@
                         <a class="nav-link" href="#hero">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="#about">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
+                        <a class="nav-link" href="#services">Serviços</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Portfolio</a>
+                        <a class="nav-link" href="#portfolio">Currículo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#reviews">Reviews</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#team">Team</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#blog">Blog</a>
+                        <a class="nav-link" href="#reviews">Contato</a>
                     </li>
                 </ul>
-                <a href="#" class="btn btn-brand ms-lg-3">Download</a>
+                <span class="me-3">|</span>
+                <a href="https://www.linkedin.com" target="_blank" class="btn btn-primary me-2">
+                    <i class="bi bi-linkedin"></i>
+                </a>
+                <a href="https://www.instagram.com" target="_blank" class="btn btn-danger">
+                    <i class="bi bi-instagram"></i>
+                </a>
             </div>
         </div>
     </nav>
@@ -60,13 +58,17 @@
     <section id="hero" class="min-vh-100 d-flex align-items-center text-center">
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <h1 data-aos="fade-left" class="text-uppercase text-white fw-semibold display-1">Welcome to elixir</h1>
-                    <h5 class="text-white mt-3 mb-4" data-aos="fade-right">WE ARE TEAM OF TALENTED DESIGNERS MAKING WEBSITES WITH BOOTSTRAP</h5>
-                    <div data-aos="fade-up" data-aos-delay="50">
-                        <a href="#" class="btn btn-brand me-2">Get Started</a>
-                        <a href="#" class="btn btn-light ms-2">Our Portfolio</a>
+                <div class="col-6">
+                    <h1 data-aos="fade-right" class="text-uppercase text-white fw-semibold display-1">MARCELO ANDREOLLI</h1>
+                    <h5 class="text-white mt-3 mb-4" data-aos="fade-right">ADVOGADO CIVIL E TRABALHISTA EM BRASÍLIA</h5>
+                    <div data-aos="fade-right" data-aos-delay="50">
+                        <a href="#" class="btn btn-brand me-2">Agende sua Consulta</a>
+                        <a href="#" class="btn btn-light ms-2">Serviços</a>
                     </div>
+                </div>
+
+                <div class="col-6">
+                                     
                 </div>
             </div>
         </div>
