todas as paginas menos curriculo

--- a/contato.html
+++ b/contato.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#hero">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sobre.html">Sobre</a>
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="#portfolio">Currículo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contato.html">Contato</a>
+                        <a class="nav-link" href="#contact">Contato</a>
                     </li>
                 </ul>
                 <span class="me-3">|</span>
@@ -57,57 +57,6 @@
         </div>
     </nav>
 
-    <!-- HERO -->
-    <section id="hero" class="min-vh-100 d-flex align-items-center text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-6">
-                    <h1 data-aos="fade-right" class="text-uppercase text-white fw-semibold display-1">MARCELO ANDREOLLI</h1>
-                    <h5 class="text-white mt-3 mb-4" data-aos="fade-right">ADVOGADO CIVIL E TRABALHISTA EM BRASÍLIA</h5>
-                    <div data-aos="fade-right" data-aos-delay="50">
-                        <a href="#" class="btn btn-success me-2"><i class="bi bi-whatsapp me-2"></i>Agende sua Consulta</a>
-                        <a href="#" class="btn btn-brand ms-2">Serviços</a>
-                    </div>
-                </div>
-
-                <div class="col-6">
-                                     
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- TEAM -->
-    <section id="team" class="section-padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
-                    <div class="section-title">
-                        <h1 class="display-4 fw-semibold">Quem Sou</h1>
-                        <div class="line"></div>
-                        <p>Enfrentando desafios legais em Brasília? Conte com a expertise de um Advogado Civil e Criminalista.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row g-4 text-center ">
-                <div class="col-md-4">
-
-                </div>
-                <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
-                    <div class="team-member image-zoom">
-                        <div class="image-zoom-wrapper">
-                            <img src="./assets/images/person-2.jpg" alt="">
-                        </div>
-                        <div class="team-member-content">
-                            <h4 class="text-white">Dr. Marcelo Andreolli</h4>
-                            <p class="mb-0 text-white">Advogado</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- CONTACT -->
     <section class="section-padding bg-light" id="contact">
         <div class="container">
@@ -122,7 +71,10 @@
             </div>
             <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="250">
                 <div class="col-lg-8">
+                    
                     <form action="#" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
+                        <a class="btn btn-success">Entre em contato conosco pelo Whatsapp <i class="bi bi-whatsapp"></i></a>
+                        <hr>
                         <div class="form-group col-lg-6">
                             <input type="text" class="form-control" placeholder="Nome">
                         </div>
