todas as seções concluídas

--- a/curriculo.html
+++ b/curriculo.html
@@ -31,13 +31,13 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sobre.html">Sobre</a>
+                        <a class="nav-link" href="#about">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Áreas de Atuação</a>
+                        <a class="nav-link" href="areas-atuacao.html">Áreas de Atuação</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="curriculo.html">Currículo</a>
+                        <a class="nav-link" href="#portfolio">Currículo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contato.html">Contato</a>
@@ -54,72 +54,31 @@
         </div>
     </nav>
 
-    <!-- SERVICES -->
-    <section id="services" class="section-padding">
+    <!-- PORTFOLIO -->
+    <section id="portfolio" class="section-padding">
         <div class="container">
             <div class="row">
-                <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
+                <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
                     <div class="section-title">
-                        <h1 class="display-4 fw-semibold">Áreas de Atuação</h1>
+                        <h1 class="display-4 fw-semibold">Currículo</h1>
                         <div class="line"></div>
-                        <p>We love to craft digital experiances for brands rather than crap and more lorem ipsums and do crazy skills</p>
                     </div>
                 </div>
             </div>
-            <div class="row g-4 text-center">
-                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-pen-nib-fill"></i>
+            <div class="row justify-content-between align-items-center">
+                <div data-aos="fade-down" data-aos-delay="150" class="col-lg-6">
+                    <div class="d-flex mb-3">
+                        <div class="line"></div>
+                        <div>
+                            <h5>Dr. Marcelo Andreolli</h5>
+                            <p>Advogado formado pela Estácio/PI em 2017 e habilitado pela OAB no mesmo ano. Possui experiência sólida em licitações e contratos administrativos, atuando como Assessor Jurídico na Prefeitura de Timon/MA por dois anos e meio. É especialista em Direito Processual Civil Empresarial pelo Instituto Legale e está cursando pós-graduações em Direito Público e Direito do Agronegócio, ampliando sua visão interdisciplinar.
+
+                            Com foco no atendimento personalizado, busca entender as necessidades de cada cliente para oferecer soluções jurídicas sob medida. Atua em áreas como licitações, contratos administrativos, Direito Processual Civil Empresarial, disputas comerciais e consultoria jurídica, sempre comprometido com eficiência e resultados.</p>
                         </div>
-                        <h5 class="mt-4 mb-3">UX Design</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="250">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-stack-fill"></i>
-                        </div>
-                        <h5 class="mt-4 mb-3">UI Design</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-ruler-2-fill"></i>
-                        </div>
-                        <h5 class="mt-4 mb-3">Logo Design</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="450">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-pie-chart-2-fill"></i>
-                        </div>
-                        <h5 class="mt-4 mb-3">Digital Marketing</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="550">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-code-box-line"></i>
-                        </div>
-                        <h5 class="mt-4 mb-3">Machine Learning</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="650">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-user-2-fill"></i>
-                        </div>
-                        <h5 class="mt-4 mb-3">UX Design</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
-                    </div>
+                <div class="col-lg-6 " data-aos="fade-down" data-aos-delay="50">
+                    <img src="assets/images/person-3.jpg" alt="Marcelo" class="img-fluid">
                 </div>
             </div>
         </div>
