--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="areas-atuacao.html">Áreas de Atuação</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Currículo</a>
+                        <a class="nav-link" href="curriculo.html">Currículo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contato.html">Contato</a>
