--- a/contato.html
+++ b/contato.html
@@ -37,19 +37,10 @@
                         <a class="nav-link" href="areas-atuacao.html">Áreas de Atuação</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="curriculo.html">Currículo</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#contact">Contato</a>
                     </li>
                 </ul>
                 <span class="me-3">|</span>
-                <a href="https://www.linkedin.com" target="_blank" class="btn btn-primary me-2">
-                    <i class="bi bi-linkedin"></i>
-                </a>
-                <a href="https://www.instagram.com" target="_blank" class="btn btn-danger me-2">
-                    <i class="bi bi-instagram"></i>
-                </a>
                 <a href="https://www.whatsapp.com" target="_blank" class="btn btn-success">
                     <i class="bi bi-whatsapp"></i>
                 </a>
@@ -71,27 +62,20 @@
             </div>
             <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="250">
                 <div class="col-lg-8">
-                    
-                    <form action="#" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
-                        <a class="btn btn-success">Entre em contato conosco pelo Whatsapp <i class="bi bi-whatsapp"></i></a>
+                    <form id="contactForm" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
+                        <a href="" class="btn btn-success">Entre em contato conosco pelo Whatsapp <i class="bi bi-whatsapp"></i></a>
                         <hr>
-                        <div class="form-group col-lg-6">
-                            <input type="text" class="form-control" placeholder="Nome">
-                        </div>
-                        <div class="form-group col-lg-6">
-                            <input type="text" class="form-control" placeholder="Sobrenome">
+                        <p>Ou nos envie um e-mail:</p>
+                        <div class="form-group col-lg-12">
+                            <label for="emailSubject">Assunto:</label>
+                            <input type="text" id="emailSubject" class="form-control" placeholder="Assunto" required>
                         </div>
                         <div class="form-group col-lg-12">
-                            <input type="email" class="form-control" placeholder="Email">
-                        </div>
-                        <div class="form-group col-lg-12">
-                            <input type="text" class="form-control" placeholder="Assunto">
-                        </div>
-                        <div class="form-group col-lg-12">
-                            <textarea name="message" rows="5" class="form-control" placeholder="Digite sua mensagem"></textarea>
+                            <label for="emailBody">Mensagem:</label>
+                            <textarea id="emailBody" name="message" rows="5" class="form-control" placeholder="Digite sua mensagem" required></textarea>
                         </div>
                         <div class="form-group col-lg-12 d-grid">
-                            <button class="btn btn-brand">Enviar Mensagem</button>
+                            <button type="button" id="sendEmailButton" class="btn btn-brand">Enviar E-mail</button>
                         </div>
                     </form>
                 </div>
