--- a/sobre.html
+++ b/sobre.html
@@ -37,18 +37,12 @@
                         <a class="nav-link" href="areas-atuacao.html">Áreas de Atuação</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="curriculo.html">Currículo</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="contato.html">Contato</a>
                     </li>
                 </ul>
                 <span class="me-3">|</span>
-                <a href="https://www.linkedin.com" target="_blank" class="btn btn-primary me-2">
-                    <i class="bi bi-linkedin"></i>
-                </a>
-                <a href="https://www.instagram.com" target="_blank" class="btn btn-danger">
-                    <i class="bi bi-instagram"></i>
+                <a href="https://www.whatsapp.com" target="_blank" class="btn btn-success">
+                    <i class="bi bi-whatsapp"></i>
                 </a>
             </div>
         </div>
