página index e contato ajustadas

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </li>
                 </ul>
                 <span class="me-3">|</span>
-                <a href="https://www.whatsapp.com" target="_blank" class="btn btn-success">
+                <a href="https://wa.me/5561999044771" target="_blank" class="btn btn-success">
                     <i class="bi bi-whatsapp"></i>
                 </a>
             </div>
@@ -49,20 +49,61 @@
     </nav>
 
     <!-- HERO -->
-    <section id="hero" class="min-vh-100 d-flex align-items-center text-center">
+    <section id="hero" class="min-vh-100 d-flex align-items-center text-center position-relative">
         <div class="container">
-            <div class="row">
-                <div class="col-6">
-                    <h1 data-aos="fade-right" class="text-uppercase text-white fw-semibold display-1">MARCELO ANDREOLLI</h1>
-                    <h5 class="text-white mt-3 mb-4" data-aos="fade-right">ADVOGADO CIVIL E TRABALHISTA EM BRASÍLIA</h5>
-                    <div data-aos="fade-right" data-aos-delay="50">
-                        <a href="#" class="btn btn-success me-2"><i class="bi bi-whatsapp me-2"></i>Agende sua Consulta</a>
-                        <a href="#" class="btn btn-brand ms-2">Serviços</a>
+            <div class="row align-items-center">
+                <div class="col-lg-6 text-lg-start text-center">
+                    <h1 data-aos="fade-right" class="text-uppercase text-white fw-semibold display-1 text-center">
+                        MARCELO ANDREOLLI
+                    </h1>
+                    <h5 class="text-white mt-3 mb-4 text-center" data-aos="fade-right">
+                        ADVOCACIA
+                    </h5>
+                    <div class="text-center" data-aos="fade-right" data-aos-delay="50">
+                        <a href="https://wa.me/5561999044771" class="btn btn-success me-2">
+                            <i class="bi bi-whatsapp me-2"></i>Agende sua Consulta
+                        </a>
+                        <a href="areas-atuacao.html" class="btn btn-brand ms-2">Serviços</a>
                     </div>
                 </div>
+    
+                <div class="col-lg-6 position-relative text-center">
+                    <img src="assets/images/advogado-1.png" alt="marcelo" class="img-fluid custom-img" data-aos="fade-left">
+                </div>
+            </div>
+        </div>
+    </section>
 
-                <div class="col-6">
-                                     
+    <!-- MISSÃO, OBJETIVOS E VALORES -->
+    <section>
+        <div class="container">
+            <div class="row g-4 text-center section-padding">
+                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
+                    <div class="service theme-shadow p-lg-5 p-4">
+                        <div class="iconbox">
+                            <i class="ri-pen-nib-fill"></i>
+                        </div>
+                        <h5 class="mt-4 mb-3">Objetivo</h5>
+                        <p>Prestar serviços jurídicos com excelência, ética e comprometimento, garantindo segurança e resultados eficazes aos clientes, consolidando-se como referência na região de Taguatinga/DF, sem se limitar a fronteiras geográficas.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="250">
+                    <div class="service theme-shadow p-lg-5 p-4">
+                        <div class="iconbox">
+                            <i class="ri-stack-fill"></i>
+                        </div>
+                        <h5 class="mt-4 mb-3">Valores</h5>
+                        <p>Integridade, respeito, transparência, dedicação e valorização da justiça, com base em mais de 35 anos de experiência e compromisso com a modernização.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
+                    <div class="service theme-shadow p-lg-5 p-4">
+                        <div class="iconbox">
+                            <i class="ri-ruler-2-fill"></i>
+                        </div>
+                        <h5 class="mt-4 mb-3">Missão</h5>
+                        <p>Defender direitos com ética e responsabilidade, construindo soluções e pontes jurídicas entre os interesses dos clientes e da sociedade de forma sólida e responsiva.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -76,7 +117,7 @@
                     <div class="section-title">
                         <h1 class="display-4 fw-semibold">Quem Somos</h1>
                         <div class="line"></div>
-                        <p>Enfrentando desafios legais em Brasília? Conte com a expertise de um Advogado Civil e Criminalista.</p>
+                        <p>Enfrentando desafios legais em Brasília? Conte com a expertise de advogados que atuam na área trabalhista e cível.</p>
                     </div>
                 </div>
             </div>
@@ -91,7 +132,7 @@
                         </div>
                         <div class="team-member-content">
                             <h4 class="text-white">Dr. Marcelo Andreolli</h4>
-                            <p class="mb-0 text-white">Advogado</p>
+                            <p class="mb-0 text-white">Advogado/Sócio</p>
                         </div>
                     </div>
                 </div>
@@ -101,8 +142,8 @@
                             <img src="./assets/images/person-2.jpg" alt="">
                         </div>
                         <div class="team-member-content">
-                            <h4 class="text-white">Dr. Pai do Marcelo</h4>
-                            <p class="mb-0 text-white">Advogado</p>
+                            <h4 class="text-white">Dr. Arimatéa Fonseca</h4>
+                            <p class="mb-0 text-white">Advogado/Sócio</p>
                         </div>
                     </div>
                 </div>
@@ -121,7 +162,7 @@
                     <div class="section-title">
                         <h1 class="display-4 text-white fw-semibold">Entre em Contato</h1>
                         <div class="line bg-white"></div>
-                        <p class="text-white">Estamos prontos para ajudar você! Caso precise de orientação jurídica especializada nas áreas de direito trabalhista, previdenciário ou cível, entre em contato conosco e conte com um suporte de excelência.</p>
+                        <p class="text-white">Estamos prontos para ajudar você! Caso precise de orientação jurídica especializada nas áreas de direito trabalhista ou cível, entre em contato conosco e conte com um suporte de excelência.</p>
                     </div>
                 </div>
             </div>
@@ -131,6 +172,7 @@
                         <a href="" class="btn btn-success">Entre em contato conosco pelo Whatsapp <i class="bi bi-whatsapp"></i></a>
                         <hr>
                         <p>Ou nos envie um e-mail:</p>
+                        <div class="error alert alert-danger">Por favor, preencha o assunto e a mensagem.</div>
                         <div class="form-group col-lg-12">
                             <label for="emailSubject">Assunto:</label>
                             <input type="text" id="emailSubject" class="form-control" placeholder="Assunto" required>
@@ -156,41 +198,33 @@
                     <div class="col-lg-3 col-sm-6">
                         <a href="#"><img style="width: 70%;" src="./assets/images/marcelo-andreolli-logo-negativa.png" alt=""></a>
                         <div class="line"></div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, hic!</p>
+                        <p>Defendendo seus direitos com seriedade e integridade.</p>
                         <div class="social-icons">
-                            <a href="#"><i class="ri-twitter-fill"></i></a>
-                            <a href="#"><i class="ri-instagram-fill"></i></a>
-                            <a href="#"><i class="ri-github-fill"></i></a>
-                            <a href="#"><i class="ri-dribbble-fill"></i></a>
+                            <a href="https://wa.me/5561999044771"><i class="ri-whatsapp-fill"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <h5 class="mb-0 text-white">ÁREAS DE ATUAÇÃO</h5>
                         <div class="line"></div>
                         <ul>
-                            <li><a href="#">UI Design</a></li>
-                            <li><a href="#">UX Design</a></li>
-                            <li><a href="#">Branding</a></li>
-                            <li><a href="#">Logo Designing</a></li>
+                            <li><a href="#">Direito do Trabalho - Pró Empregado</a></li>
+                            <li><a href="#">Direito do Trabalho - Patronal</a></li>
+                            <li><a href="#">Direito da Família</a></li>
+                            <li><a href="#">Direito Imobiliário</a></li>
+                            <li><a href="#">Direito Sucessório</a></li>
+                            <li><a href="#">Relações Comerciais e Contratuais</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <h5 class="mb-0 text-white">CONTATO</h5>
                         <div class="line"></div>
                         <ul>
-                            <li>New York, NY 3300</li>
-                            <li>(61) 99999-9999</li>
-                            <li>www.example.com</li>
+                            <li>C12, Edíficio Paranoá Center, Sala 225, Taguatinga Centro - Brasília - DF</li>
+                            <li>(61) 99904-4771</li>
+                            <li>m.andreolliadv@gmail.com</li>
                         </ul>
                         <div class="map-container" style="width: 100%; height: 200px; margin-top: 1rem;">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509684!2d144.9630577153152!3d-37.81410797975162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xf5776d368edbf012!2sFederation+Square!5e0!3m2!1sen!2sbr!4v1618501534545!5m2!1sen!2sbr"
-                                width="100%"
-                                height="200"
-                                style="border: 0;"
-                                allowfullscreen=""
-                                loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3227.7184154056345!2d-48.06050351242343!3d-15.834207666371473!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a331266ff2fcd%3A0x24d8bba33a09583e!2sEdif%C3%ADcio%20Parano%C3%A1%20Center!5e0!3m2!1spt-BR!2sbr!4v1744152174961!5m2!1spt-BR!2sbr" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                             </iframe>
                         </div>
                     </div>
