--- a/contato.html
+++ b/contato.html
@@ -66,6 +66,7 @@
                         <a href="" class="btn btn-success">Entre em contato conosco pelo Whatsapp <i class="bi bi-whatsapp"></i></a>
                         <hr>
                         <p>Ou nos envie um e-mail:</p>
+                        <div class="error alert alert-danger">Por favor, preencha o assunto e a mensagem.</div>
                         <div class="form-group col-lg-12">
                             <label for="emailSubject">Assunto:</label>
                             <input type="text" id="emailSubject" class="form-control" placeholder="Assunto" required>
@@ -89,34 +90,37 @@
             <div class="container">
                 <div class="row gy-5">
                     <div class="col-lg-3 col-sm-6">
-                        <a href="#"><img style="width: 70%;" src="./assets/images/logo_marcelo_teste.png" alt=""></a>
+                        <a href="#"><img style="width: 70%;" src="./assets/images/marcelo-andreolli-logo-negativa.png" alt=""></a>
                         <div class="line"></div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, hic!</p>
+                        <p>Defendendo seus direitos com seriedade e integridade.</p>
                         <div class="social-icons">
-                            <a href="#"><i class="ri-twitter-fill"></i></a>
-                            <a href="#"><i class="ri-instagram-fill"></i></a>
-                            <a href="#"><i class="ri-github-fill"></i></a>
-                            <a href="#"><i class="ri-dribbble-fill"></i></a>
+                            <a href="https://wa.me/5561999044771"><i class="ri-whatsapp-fill"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <h5 class="mb-0 text-white">ÁREAS DE ATUAÇÃO</h5>
                         <div class="line"></div>
                         <ul>
-                            <li><a href="#">UI Design</a></li>
-                            <li><a href="#">UX Design</a></li>
-                            <li><a href="#">Branding</a></li>
-                            <li><a href="#">Logo Designing</a></li>
+                            <li><a href="#">Direito do Trabalho - Pró Empregado</a></li>
+                            <li><a href="#">Direito do Trabalho - Patronal</a></li>
+                            <li><a href="#">Direito da Família</a></li>
+                            <li><a href="#">Direito Imobiliário</a></li>
+                            <li><a href="#">Direito Sucessório</a></li>
+                            <li><a href="#">Relações Comerciais e Contratuais</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <h5 class="mb-0 text-white">CONTATO</h5>
                         <div class="line"></div>
                         <ul>
-                            <li>New York, NY 3300</li>
-                            <li>(61) 99999-9999</li>
-                            <li>www.example.com</li>
+                            <li>C12, Edíficio Paranoá Center, Sala 225, Taguatinga Centro - Brasília - DF</li>
+                            <li>(61) 99904-4771</li>
+                            <li>m.andreolliadv@gmail.com</li>
                         </ul>
+                        <div class="map-container" style="width: 100%; height: 200px; margin-top: 1rem;">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3227.7184154056345!2d-48.06050351242343!3d-15.834207666371473!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a331266ff2fcd%3A0x24d8bba33a09583e!2sEdif%C3%ADcio%20Parano%C3%A1%20Center!5e0!3m2!1spt-BR!2sbr!4v1744152174961!5m2!1spt-BR!2sbr" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                            </iframe>
+                        </div>
                     </div>
                 </div>
             </div>
