--- a/areas-atuacao.html
+++ b/areas-atuacao.html
@@ -48,71 +48,76 @@
         </div>
     </nav>
 
-    <!-- SERVICES -->
+    <!-- ÁREAS DE ATUAÇÃO -->
     <section id="services" class="section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
                     <div class="section-title">
                         <h1 class="display-4 fw-semibold">Áreas de Atuação</h1>
-                        <div class="line"></div>
-                        <p>We love to craft digital experiances for brands rather than crap and more lorem ipsums and do crazy skills</p>
+                        <div class="line mt-4"></div>
                     </div>
                 </div>
             </div>
             <div class="row g-4 text-center">
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-pen-nib-fill"></i>
+                    <div class="card">
+                        <img src="assets/images/direito-trabalhista-empregado.jpg" class="card-img-top" alt="Direito Trabalhista">
+                        <div class="card-body">
+                          <h5 class="card-title">Direito do Trabalho - Pró Empregado</h5>
+                          <p class="card-text">Defesa dos direitos do trabalhador em ações de demissão, verbas, horas extras, assédio e demais questões trabalhistas.</p>
+                          <a href="#" class="btn btn-brand">Saiba Mais</a>
                         </div>
-                        <h5 class="mt-4 mb-3">UX Design</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="250">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-stack-fill"></i>
+                    <div class="card">
+                        <img src="assets/images/direito-trabalhista-patronal.jpg" class="card-img-top" alt="Direito Trabalhista">
+                        <div class="card-body">
+                          <h5 class="card-title">Direito do Trabalho - Patronal</h5>
+                          <p class="card-text">Assessoria jurídica para empresas na gestão de contratos, prevenção de passivos trabalhistas e defesa em reclamações judiciais.</p>
+                          <a href="#" class="btn btn-brand">Saiba Mais</a>
                         </div>
-                        <h5 class="mt-4 mb-3">UI Design</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-ruler-2-fill"></i>
+                    <div class="card">
+                        <img src="assets/images/direito-familia.jpg" class="card-img-top" alt="Direito da Família">
+                        <div class="card-body">
+                          <h5 class="card-title">Direito da Família</h5>
+                          <p class="card-text">Atuação em divórcios, guarda, pensão alimentícia e demais questões familiares, sempre com sensibilidade e foco na solução.</p>
+                          <a href="#" class="btn btn-brand">Saiba Mais</a>
                         </div>
-                        <h5 class="mt-4 mb-3">Logo Design</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="450">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-pie-chart-2-fill"></i>
+                    <div class="card">
+                        <img src="assets/images/direito-imobiliario.jpg" class="card-img-top" alt="Direito Imobiliário">
+                        <div class="card-body">
+                          <h5 class="card-title">Direito Imobiliário</h5>
+                          <p class="card-text">Atuação em contratos de compra e venda, locação, usucapião, regularização de imóveis e disputas envolvendo bens imóveis.</p>
+                          <a href="#" class="btn btn-brand">Saiba Mais</a>
                         </div>
-                        <h5 class="mt-4 mb-3">Digital Marketing</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="550">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-code-box-line"></i>
+                    <div class="card">
+                        <img src="assets/images/direito-sucessorio.jpg" class="card-img-top" alt="Direito Sucessório">
+                        <div class="card-body">
+                          <h5 class="card-title">Direito Sucessório</h5>
+                          <p class="card-text">Atendimento em inventários, partilhas, testamentos e planejamento sucessório, garantindo a correta distribuição do patrimônio entre herdeiros.</p>
+                          <a href="#" class="btn btn-brand">Saiba Mais</a>
                         </div>
-                        <h5 class="mt-4 mb-3">Machine Learning</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="650">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-user-2-fill"></i>
+                    <div class="card">
+                        <img src="assets/images/hand-shake-1.jpg" class="card-img-top" alt="Relações Comerciais e Contratuais">
+                        <div class="card-body">
+                          <h5 class="card-title">Relações Comerciais e Contratuais</h5>
+                          <p class="card-text">Elaboração, análise e revisão de contratos, com foco na segurança jurídica de empresas e negociações comerciais diversas.</p>
+                          <a href="#" class="btn btn-brand">Saiba Mais</a>
                         </div>
-                        <h5 class="mt-4 mb-3">UX Design</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
                     </div>
                 </div>
             </div>
