página sobre e ícones ajustados

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
                     <div class="service theme-shadow p-lg-5 p-4">
                         <div class="iconbox">
-                            <i class="ri-pen-nib-fill"></i>
+                            <i class="ri-focus-2-line"></i>
                         </div>
                         <h5 class="mt-4 mb-3">Objetivo</h5>
                         <p>Prestar serviços jurídicos com excelência, ética e comprometimento, garantindo segurança e resultados eficazes aos clientes, consolidando-se como referência na região de Taguatinga/DF, sem se limitar a fronteiras geográficas.</p>
@@ -90,7 +90,7 @@
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="250">
                     <div class="service theme-shadow p-lg-5 p-4">
                         <div class="iconbox">
-                            <i class="ri-stack-fill"></i>
+                            <i class="ri-heart-line"></i>
                         </div>
                         <h5 class="mt-4 mb-3">Valores</h5>
                         <p>Integridade, respeito, transparência, dedicação e valorização da justiça, com base em mais de 35 anos de experiência e compromisso com a modernização.</p>
@@ -99,7 +99,7 @@
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
                     <div class="service theme-shadow p-lg-5 p-4">
                         <div class="iconbox">
-                            <i class="ri-ruler-2-fill"></i>
+                            <i class="ri-flag-line"></i>
                         </div>
                         <h5 class="mt-4 mb-3">Missão</h5>
                         <p>Defender direitos com ética e responsabilidade, construindo soluções e pontes jurídicas entre os interesses dos clientes e da sociedade de forma sólida e responsiva.</p>
