--- a/sobre.html
+++ b/sobre.html
@@ -65,78 +65,73 @@
                     <img src="./assets/images/about.jpg" alt="">
                 </div>
                 <div data-aos="fade-down" data-aos-delay="150" class="col-lg-5">
-                    <div class="d-flex mb-3">
+                    <div class="d-flex mb-3 mt-sm-4">
                         <div class="iconbox me-4">
                             <i class="ri-user-5-fill"></i>
                         </div>
                         <div>
-                            <h5>Atendimento Diferenciado</h5>
-                            <p>Com uma abordagem centrada no cliente, nos destacamos por nosso atendimento humanizado e pela busca em identificar de forma precisa as necessidades individuais. Usando uma linguagem próxima aos nossos clientes, compreendemos a importância de nos comunicar de maneira clara e acessível, evitando jargões jurídicos complexos que possam gerar confusão.</p>
+                            <h5>Tradição Jurídica</h5>
+                            <p>O escritório teve início apenas com o Dr. Arimatéa, advogado desde 1988, que fundou oficialmente a banca em 1999, consolidando sua reputação pela atuação firme e ética na defesa dos trabalhadores em ações contra grande empresas. Ao longo dos anos, acumulou vitórias expressivas e reconhecimento pela dedicação às causas dos trabalhadores. Em 2017, seu filho, Marcelo Andreolli, ingressou na advocacia, trazendo uma nova energia e visão moderna ao escritório. Hoje, pai e filho atuam em sociedade, unindo tradição e inovação para oferecer um atendimento jurídico de excelência e alinhado aos desafios contemporâneos.</p>
                         </div>
                     </div>
-                    <div class="d-flex">
-                        <div class="iconbox me-4">
-                            <i class="ri-rocket-2-fill"></i>
-                        </div>
-                        <div>
-                            <h5>Online e Presencial</h5>
-                            <p>Oferecemos atendimento online e presencial, com a possibilidade de ir até o cliente. Estamos prontos para fornecer assistência jurídica personalizada e eficiente, visando alcançar os melhores resultados em cada caso.</p>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
     </section>
 
         <!-- FOOTER -->
-        <footer class="bg-dark">
-            <div class="footer-top">
-                <div class="container">
-                    <div class="row gy-5">
-                        <div class="col-lg-3 col-sm-6">
-                            <a href="#"><img style="width: 70%;" src="./assets/images/logo_marcelo_teste.png" alt=""></a>
-                            <div class="line"></div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, hic!</p>
-                            <div class="social-icons">
-                                <a href="#"><i class="ri-twitter-fill"></i></a>
-                                <a href="#"><i class="ri-instagram-fill"></i></a>
-                                <a href="#"><i class="ri-github-fill"></i></a>
-                                <a href="#"><i class="ri-dribbble-fill"></i></a>
-                            </div>
+    <footer class="bg-dark">
+        <div class="footer-top">
+            <div class="container">
+                <div class="row gy-5">
+                    <div class="col-lg-3 col-sm-6">
+                        <a href="#"><img style="width: 70%;" src="./assets/images/marcelo-andreolli-logo-negativa.png" alt=""></a>
+                        <div class="line"></div>
+                        <p>Defendendo seus direitos com seriedade e integridade.</p>
+                        <div class="social-icons">
+                            <a href="https://wa.me/5561999044771"><i class="ri-whatsapp-fill"></i></a>
                         </div>
-                        <div class="col-lg-3 col-sm-6">
-                            <h5 class="mb-0 text-white">ÁREAS DE ATUAÇÃO</h5>
-                            <div class="line"></div>
-                            <ul>
-                                <li><a href="#">UI Design</a></li>
-                                <li><a href="#">UX Design</a></li>
-                                <li><a href="#">Branding</a></li>
-                                <li><a href="#">Logo Designing</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-3 col-sm-6">
-                            <h5 class="mb-0 text-white">CONTATO</h5>
-                            <div class="line"></div>
-                            <ul>
-                                <li>New York, NY 3300</li>
-                                <li>(61) 99999-9999</li>
-                                <li>www.example.com</li>
-                            </ul>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <h5 class="mb-0 text-white">ÁREAS DE ATUAÇÃO</h5>
+                        <div class="line"></div>
+                        <ul>
+                            <li><a href="#">Direito do Trabalho - Pró Empregado</a></li>
+                            <li><a href="#">Direito do Trabalho - Patronal</a></li>
+                            <li><a href="#">Direito da Família</a></li>
+                            <li><a href="#">Direito Imobiliário</a></li>
+                            <li><a href="#">Direito Sucessório</a></li>
+                            <li><a href="#">Relações Comerciais e Contratuais</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <h5 class="mb-0 text-white">CONTATO</h5>
+                        <div class="line"></div>
+                        <ul>
+                            <li>C12, Edíficio Paranoá Center, Sala 225, Taguatinga Centro - Brasília - DF</li>
+                            <li>(61) 99904-4771</li>
+                            <li>m.andreolliadv@gmail.com</li>
+                        </ul>
+                        <div class="map-container" style="width: 100%; height: 200px; margin-top: 1rem;">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3227.7184154056345!2d-48.06050351242343!3d-15.834207666371473!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a331266ff2fcd%3A0x24d8bba33a09583e!2sEdif%C3%ADcio%20Parano%C3%A1%20Center!5e0!3m2!1spt-BR!2sbr!4v1744152174961!5m2!1spt-BR!2sbr" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                            </iframe>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="footer-bottom">
-                <div class="container">
-                    <div class="row g-4 justify-content-between">
-                        <div class="col-auto">
-                            <p class="mb-0">© Marcelo Andreolli. Todos os direitos reservados.</p>
-                        </div>
-    
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="row g-4 justify-content-between">
+                    <div class="col-auto">
+                        <p class="mb-0">© Marcelo Andreolli. Todos os direitos reservados.</p>
                     </div>
+
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
 
 
 
