--- a/sobre.html
+++ b/sobre.html
@@ -62,9 +62,9 @@
             </div>
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-6" data-aos="fade-down" data-aos-delay="50">
-                    <img src="./assets/images/about.jpg" alt="">
+                    <img src="./assets/images/marcelo_arimatea_01.jpg" alt="" style="max-height: 800px;">
                 </div>
-                <div data-aos="fade-down" data-aos-delay="150" class="col-lg-5">
+                <div data-aos="fade-down" data-aos-delay="150" class="col-lg-6">
                     <div class="d-flex mb-3 mt-sm-4">
                         <div class="iconbox me-4">
                             <i class="ri-user-5-fill"></i>
