--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </nav>
 
     <!-- HERO -->
-    <section id="hero" class="min-vh-100 d-flex align-items-center text-center position-relative">
+    <section id="hero" class="min-vh-100 d-flex align-items-end text-center position-relative">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 text-lg-start text-center">
@@ -63,12 +63,12 @@
                         <a href="https://wa.me/5561999044771" class="btn btn-success me-2">
                             <i class="bi bi-whatsapp me-2"></i>Agende sua Consulta
                         </a>
-                        <a href="areas-atuacao.html" class="btn btn-brand ms-2">Serviços</a>
+                        <a href="areas-atuacao.html" class="btn btn-brand">Serviços</a>
                     </div>
                 </div>
     
-                <div class="col-lg-6 position-relative text-center">
-                    <img src="assets/images/advogado-1.png" alt="marcelo" class="img-fluid custom-img" data-aos="fade-left">
+                <div class="col-lg-6 position-relative text-center align-items-end">
+                    <img src="assets/images/marcelo_andreolli_01.png" alt="marcelo" class="img-fluid align-bottom img-mobile" data-aos="fade-left">
                 </div>
             </div>
         </div>
@@ -115,7 +115,7 @@
             <div class="row">
                 <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
                     <div class="section-title">
-                        <h1 class="display-4 fw-semibold">Quem Somos</h1>
+                        <h1 class="display-4 fw-semibold">Equipe</h1>
                         <div class="line"></div>
                         <p>Enfrentando desafios legais em Brasília? Conte com a expertise de advogados que atuam na área trabalhista e cível.</p>
                     </div>
@@ -128,7 +128,7 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/person-1.jpg" alt="">
+                            <img src="./assets/images/marcelo_andreolli_02.jpg" alt="">
                         </div>
                         <div class="team-member-content">
                             <h4 class="text-white">Dr. Marcelo Andreolli</h4>
@@ -139,7 +139,7 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/person-2.jpg" alt="">
+                            <img src="./assets/images/arimatea_01.jpg" alt="">
                         </div>
                         <div class="team-member-content">
                             <h4 class="text-white">Dr. Arimatéa Fonseca</h4>
