página equipe criada e navbar atualizada

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                         <a class="nav-link" href="#hero">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sobre.html">Sobre</a>
+                        <a class="nav-link" href="sobre.html">Sobre Nós</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="equipe.html">Equipe</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="areas-atuacao.html">Áreas de Atuação</a>
@@ -133,6 +136,7 @@
                         <div class="team-member-content">
                             <h4 class="text-white">Dr. Marcelo Andreolli</h4>
                             <p class="mb-0 text-white">Advogado/Sócio</p>
+                            <a href="equipe.html" class="btn btn-brand-light mt-3">Currículo</a>
                         </div>
                     </div>
                 </div>
@@ -144,6 +148,7 @@
                         <div class="team-member-content">
                             <h4 class="text-white">Dr. Arimatéa Fonseca</h4>
                             <p class="mb-0 text-white">Advogado/Sócio</p>
+                            <a href="equipe.html" class="btn btn-brand-light mt-3">Currículo</a>
                         </div>
                     </div>
                 </div>
