--- a/areas-atuacao.html
+++ b/areas-atuacao.html
@@ -31,7 +31,10 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sobre.html">Sobre</a>
+                        <a class="nav-link" href="sobre.html">Sobre Nós</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="equipe.html">Equipe</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#services">Áreas de Atuação</a>
