--- a/equipe.html
+++ b/equipe.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg bg-white sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img class="logo" src="./assets/images/logo_marcelo_teste.png" alt="">
+                <img class="logo" src="./assets/images/marcelo-andreolli-logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="#hero">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sobre.html">Sobre Nós</a>
@@ -40,48 +40,59 @@
                         <a class="nav-link" href="areas-atuacao.html">Áreas de Atuação</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contato</a>
+                        <a class="nav-link" href="contato.html">Contato</a>
                     </li>
                 </ul>
                 <span class="me-3">|</span>
-                <a href="https://www.whatsapp.com" target="_blank" class="btn btn-success">
+                <a href="https://wa.me/5561999044771" target="_blank" class="btn btn-success">
                     <i class="bi bi-whatsapp"></i>
                 </a>
             </div>
         </div>
     </nav>
 
-    <!-- CONTACT -->
-    <section class="section-padding bg-light" id="contact">
+    <!-- TEAM -->
+    <section id="team" class="section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
                     <div class="section-title">
-                        <h1 class="display-4 text-white fw-semibold">Entre em Contato</h1>
-                        <div class="line bg-white"></div>
-                        <p class="text-white">Estamos prontos para ajudar você! Caso precise de orientação jurídica especializada nas áreas de direito trabalhista, previdenciário ou cível, entre em contato conosco e conte com um suporte de excelência.</p>
+                        <h1 class="display-4 fw-semibold">Equipe</h1>
+                        <div class="line"></div>
+                        <p>Enfrentando desafios legais em Brasília? Conte com a expertise de advogados que atuam na área trabalhista e cível.</p>
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="250">
-                <div class="col-lg-8">
-                    <form id="contactForm" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
-                        <a href="" class="btn btn-success">Entre em contato conosco pelo Whatsapp <i class="bi bi-whatsapp"></i></a>
-                        <hr>
-                        <p>Ou nos envie um e-mail:</p>
-                        <div class="error alert alert-danger">Por favor, preencha o assunto e a mensagem.</div>
-                        <div class="form-group col-lg-12">
-                            <label for="emailSubject">Assunto:</label>
-                            <input type="text" id="emailSubject" class="form-control" placeholder="Assunto" required>
+            <div class="row g-4 text-center ">
+                <div class="col-md-2">
+
+                </div>
+                <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
+                    <div class="team-member image-zoom">
+                        <div class="image-zoom-wrapper">
+                            <img src="./assets/images/marcelo_andreolli_02.jpg" alt="">
                         </div>
-                        <div class="form-group col-lg-12">
-                            <label for="emailBody">Mensagem:</label>
-                            <textarea id="emailBody" name="message" rows="5" class="form-control" placeholder="Digite sua mensagem" required></textarea>
+                        <div class="team-member-content">
+                            <h4 class="text-white">Dr. Marcelo Andreolli</h4>
+                            <p class="mb-0 text-white">Advogado/Sócio</p>
+                            <a href="equipe.html" class="btn btn-brand-light mt-3">Currículo</a>
                         </div>
-                        <div class="form-group col-lg-12 d-grid">
-                            <button type="button" id="sendEmailButton" class="btn btn-brand">Enviar E-mail</button>
+                    </div>
+                </div>
+                <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
+                    <div class="team-member image-zoom">
+                        <div class="image-zoom-wrapper">
+                            <img src="./assets/images/arimatea_01.jpg" alt="">
                         </div>
-                    </form>
+                        <div class="team-member-content">
+                            <h4 class="text-white">Dr. Arimatéa Fonseca</h4>
+                            <p class="mb-0 text-white">Advogado/Sócio</p>
+                            <a href="equipe.html" class="btn btn-brand-light mt-3">Currículo</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    
                 </div>
             </div>
         </div>
