--- a/sobre.html
+++ b/sobre.html
@@ -31,7 +31,10 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">Sobre</a>
+                        <a class="nav-link" href="#about">Sobre Nós</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="equipe.html">Equipe</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="areas-atuacao.html">Áreas de Atuação</a>
